Fix scrollbar in landing page

--- a/django_project/frontend/src/containers/HomePage/index.scss
+++ b/django_project/frontend/src/containers/HomePage/index.scss
@@ -74,3 +74,7 @@
   width: 25px;
   padding-left: var(--space-xxs);
 }
+
+.LandingPage {
+  overflow: auto;
+}
